# minute

./: .readthedocs.yaml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  Snakefile  Snakefile.download  config.yaml  environment.yml  experiment.tsv  mkdocs.yml  multiqc_config.yaml  pyproject.toml  se_bam.py  se_sam.py  setup.cfg  summary_plots.R  test.sh  utils.py
.github/workflows/: ci.yml
docs/: guide.md  index.md  install.md  reference.md
minute/: Snakefile  __init__.py  __main__.py  multiqc_config.yaml  se_bam.py  se_dedup.py  summary_plots.R
minute-testdata/: README.md  Snakefile  config.yaml  controls.tsv  experiment.tsv
minute/cli/: download.py  init.py  run.py
src/minute/: Snakefile  __init__.py  __main__.py  minute.yaml  multiqc_config.yaml  summary_plots.R
src/minute/cli/: init.py  run.py
testdata/: Snakefile  barcodes.tsv  config.yaml  controls.tsv  exclude1.bed  exclude2.bed  groups.tsv  libraries.tsv  mapped.bai  mapped.bam  minute.yaml  ref.chrom.sizes
tests/: test_minute.py  test_se_dedup.py
