[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minute"
authors = [
    {name = "Minute authors"}
]
description = "MINUTE-ChIP data analysis workflow"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.7"
version = "0.11.0"
dependencies = [
    "ruamel.yaml",
    "xopen",
    "importlib_metadata; python_version<'3.8'"
]

[project.urls]
"Homepage" = "https://github.com/NBISweden/minute/"

[project.scripts]
minute = "minute.__main__:main"
