[metadata]
name = minute
author = Minute authors
author_email =
url = https://github.com/NBISweden/minute/
# description =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    ruamel.yaml

[options.entry_points]
console_scripts =
    minute = minute.__main__:main

[options.package_data]
* =
    Snakefile
    multiqc_config.yaml
    summary_plots.R
    minute.yaml
