[metadata]
name = minute
author = Minute authors
author_email =
url = https://github.com/NBISweden/minute/
description = MINUTE-ChIP data analysis workflow
license = MIT
version = 0.3.3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    xopen
    ruamel.yaml
    importlib_metadata; python_version<'3.8'

[options.entry_points]
console_scripts =
    minute = minute.__main__:main

[options.package_data]
* =
    Snakefile
    multiqc_config.yaml
    summary_plots.R
    minute.yaml
